# rust-lifecycle-game

./: .gitignore  1.js  CONTRIBUTING.md  README.md  index.html  main.js  package.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  codeql.yml
src/: index.html  index.ts  lifegame.ts
wasm-game-of-life/: Cargo.toml
wasm-game-of-life/src/: lib.rs
